# DGPA_vacancy

./: .gitignore  line_notify.py  main.py  pyproject.toml  result.html
.github/workflows/: main.yml
