[tool.poetry]
name = "vacancy"
version = "0.1.0"
description = ""
authors = ["weyltensor007 <weyltensor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
requests = "*"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
